examples/errors/syntax_missing_equals.jc
// ================================================
// ERROR: Missing Equals Sign
// Expected: [SyntaxError] Expected '=' after variable name
// ================================================

// Missing the equals sign in variable declaration
keep name "John";
